--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,8 @@
 /Card.class
 /Main.class
 /Tests1.class
+/Introduction.class
+/Main$1Bicycle.class
+/Bicycle.class
+/Main$Bicycle.class
+/Players.class
